--- a/css/styles.css
+++ b/css/styles.css
@@ -2,33 +2,73 @@
 
 /* applies to screens smaller than 500px (first breakpoint) */
 /* and above unless overwritten below */
+html,
+body,
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  overflow: hidden;
+}
 
 body {
-  background: #fcc;
-} 
+  background: #000;
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+}
 
+.parallax {
+  perspective: 1px;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.parallax-layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+}
+.parallax-foreground {
+  transform: translateZ(0);
+}
+.parallax-background {
+  transform: translateZ(-10px);
+}
 
+.parallax-background img {
+  position: absolute;
+  left: -1000vw;
+  top: -300vh;
+  width: 1500vh;
+  opacity: 50%;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 80vh;
+  padding: 0;
+}
+
+section h1 {
+  font-size: 8vw;
+}
 
 /* TABLET STYLES */
 
 @media screen and (min-width: 500px) {
-
   /* applies to screens wider than 499px */
-  
-  body {
-    background: #cfc;
-  } 
 }
-
-
 
 /* DESKTOP STYLES */
 
 @media screen and (min-width: 1000px) {
-
   /* applies to screens wider than 999px */
-
-  body {
-    background: #ccf;
-  } 
 }
