--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,14 @@
 
 /* applies to screens smaller than 500px (first breakpoint) */
 /* and above unless overwritten below */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@10&display=swap");
+
 html,
 body,
 h1 {
   margin: 0;
   padding: 0;
+  font-weight: 100;
 }
 
 html {
@@ -16,6 +19,10 @@ html {
 body {
   background: #000;
   font-family: "Roboto", sans-serif;
+  color: #fff;
+}
+
+a {
   color: #fff;
 }
 
@@ -37,38 +44,50 @@ body {
   transform: translateZ(0);
 }
 .parallax-background {
-  transform: translateZ(-10px);
+  transform: translateZ(-5px);
 }
 
-.parallax-background img {
-  position: absolute;
-  left: -1000vw;
-  top: -300vh;
-  width: 1500vh;
+#toxic-logo {
   opacity: 50%;
+  position: absolute;
+  width: calc(1308px + 410vw + 100vh);
+  transform: translate(-30%, -30%);
 }
 
 section {
   display: flex;
   align-items: center;
-  justify-content: center;
+  flex-direction: column;
   width: 100vw;
-  height: 80vh;
   padding: 0;
 }
 
+#first-view h1 {
+  padding: 22vh 0vh 72vh 0vh;
+}
+
 section h1 {
-  font-size: 8vw;
+  font-size: calc(30px + 1.5vw);
+  text-align: center;
+}
+
+section img {
+  width: 68%;
+  padding: 0.5em 0;
 }
 
 /* TABLET STYLES */
 
 @media screen and (min-width: 500px) {
-  /* applies to screens wider than 499px */
+}
+
+@media screen and (min-width: 700px) {
 }
 
 /* DESKTOP STYLES */
 
 @media screen and (min-width: 1000px) {
-  /* applies to screens wider than 999px */
+  section h1 {
+    font-size: 6.5vw;
+  }
 }
