--- a/css/styles.css
+++ b/css/styles.css
@@ -98,9 +98,13 @@ header img {
   }
 }
 
-#toxic-logo {
+.logo-background {
   transform: translate(11%, 22%);
   animation: bgIn 1.5s cubic-bezier(0, 0, 0, 1);
+}
+#toxic-logo-2 {
+  animation: none;
+  opacity: 30%;
 }
 
 /* ###################### NAV ############################## */
@@ -124,7 +128,7 @@ nav {
 }
 
 nav div {
-  width: 60%;
+  width: 70%;
   padding: 10vh 0;
   display: flex;
   flex-direction: column;
@@ -170,6 +174,19 @@ nav div a h1 {
 
 /* ##################### MAIN CONTENT ####################### */
 
+section aside {
+  width: 80vw;
+}
+
+section video {
+  width: 80vw;
+  height: 80vw;
+}
+
+input[pseudo="-internal-media-controls-overflow-button"] {
+  display: none;
+}
+
 section {
   display: flex;
   align-items: center;
@@ -214,7 +231,7 @@ figure {
 .sub-title {
   opacity: 1;
   transition: opacity 1s;
-  padding-bottom: 40vh;
+  padding-bottom: 11vh;
 }
 
 .img-in-block {
@@ -222,15 +239,15 @@ figure {
   transition: opacity 1s;
 }
 
-#our-story-button {
+#next-page-button {
   padding-bottom: 13em;
 }
 
-#our-story-button h1 {
+#next-page-button h1 {
   padding: 0;
 }
 
-#our-story-button a {
+#next-page-button a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -250,7 +267,7 @@ figure {
   }
 }
 
-#our-story-button a img {
+#next-page-button a img {
   position: relative;
   width: 3em;
   padding: 0;
@@ -334,9 +351,9 @@ footer p a {
   }
 
   .parallax-background {
-    transform: translateZ(-150px) scale(32);
+    transform: translateZ(-45px) scale(11);
   }
-  #toxic-logo {
+  .logo-background {
     transform: translate(40%, 0%);
     animation: bgIn600px 1.5s cubic-bezier(0, 0, 0, 1);
   }
@@ -406,6 +423,10 @@ footer p a {
     grid-column-start: span 2;
     align-self: start;
     justify-self: center;
+  }
+
+  #next-page-button {
+    padding-bottom: 22vh;
   }
 }
 
