--- a/css/styles.css
+++ b/css/styles.css
@@ -183,10 +183,10 @@ section p {
   transition: opacity 1s;
 }
 
-section video {
+/* section video {
   width: 80vw;
   height: 80vw;
-}
+} */
 
 input[pseudo="-internal-media-controls-overflow-button"] {
   display: none;
@@ -202,6 +202,8 @@ section {
 
 article {
   padding-bottom: 30vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .first-view {
@@ -213,9 +215,6 @@ article {
 
   opacity: 1;
   transition: opacity 2.5s;
-
-  /* font-weight: 300;
-  text-shadow: 0px 0px 4px #fff; */
 }
 
 h1 {
@@ -235,6 +234,10 @@ figure {
   align-items: center;
   margin: 0;
   padding-bottom: 12em;
+}
+
+#paragraph1 {
+  margin-top: 30vh;
 }
 
 .sub-title {
@@ -333,6 +336,11 @@ footer p a {
   animation: bobUpDown 4s ease-in-out infinite;
 }
 
+video {
+  width: 100%;
+  height: 100%;
+}
+
 .video-wrapper {
   width: 80vw;
   height: 80vw;
@@ -351,7 +359,6 @@ footer p a {
 .video-control {
   position: relative;
   width: 5vw;
-  height: 5vw;
 }
 
 .fade-in {
@@ -402,6 +409,33 @@ footer p a {
   section img {
     width: 90%;
     padding: 0.5em 0;
+  }
+
+  article {
+    flex-direction: row;
+  }
+
+  article p {
+    text-align: right;
+    width: 40vw;
+    padding: 0 1.5em;
+  }
+
+  .video-wrapper {
+    width: 40vw;
+    height: 40vw;
+  }
+
+  #paragraph2 p,
+  #paragraph4 p,
+  #paragraph6 p {
+    order: 2;
+    text-align: left;
+  }
+  #paragraph2 .video-wrapper,
+  #paragraph4 .video-wrapper,
+  #paragraph6 .video-wrapper {
+    order: 1;
   }
 
   #bold1 {
@@ -456,14 +490,26 @@ footer p a {
   }
 
   #next-page-button {
-    padding-bottom: 22vh;
+    padding-bottom: 27vh;
+  }
+  /* ################### MISCELLANIOUS ################ */
+
+  .video-control {
+    position: relative;
+    width: 3vw;
+  }
+
+  .mute-unmute {
+    left: 31vw;
+    top: -39vw;
+  }
+
+  .play-pause {
+    right: -3vw;
+    top: -7vw;
   }
 }
-
 /* DESKTOP STYLES */
 
 @media screen and (min-width: 1000px) {
-  section h1 {
-    font-size: 6.5vw;
-  }
 }
