--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,12 @@ article {
   transition: opacity 2.5s;
 }
 
+.main-title2 {
+  opacity: 1;
+  transition: opacity 2.5s;
+  margin-top: 15vh;
+}
+
 h1 {
   font-size: calc(30px + 1.5vw);
   text-shadow: 0px 0px 4px #fff, 0px 0px 16px #fff;
