--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,14 @@ section > h1 {
   transform: rotate(-90deg);
   animation: bobRight 2s infinite;
 }
+
+.textbox {
+  background-color: rgba(0, 0, 0, 0.65);
+  border: none;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+}
+
 /* ################################## FOOTER ########################### */
 
 footer {
