--- a/css/styles.css
+++ b/css/styles.css
@@ -338,11 +338,54 @@ section > h1 {
   animation: bobRight 2s infinite;
 }
 
+.main-title3 {
+  margin-top: 40vh;
+}
+
+#form-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  box-sizing: border-box;
+  width: 85vw;
+  transition: opacity 2s;
+}
+
 .textbox {
   background-color: rgba(0, 0, 0, 0.65);
-  border: none;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0.5em;
+  margin-bottom: 0.5em;
+  max-width: 100%;
+  border: 2px solid rgba(0, 0, 0, 1);
+  border-radius: 5px;
   color: #fff;
   font-family: "Roboto", sans-serif;
+  transition: box-shadow 0.2s;
+}
+
+form textarea {
+  max-width: 100%;
+  min-width: 100%;
+  height: 20vh;
+}
+
+.textbox:focus {
+  box-shadow: 0px 0px 7px 3px rgba(255, 255, 255, 0.79);
+}
+
+input[type="submit"] {
+  width: 100%;
+  background-color: #000;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5em;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  padding: 0.15em;
 }
 
 /* ################################## FOOTER ########################### */
